sql/sql_select.cc
@@ -4951,7 +4951,10 @@ join_read_system(JOIN_TAB *tab)
 	table->file->print_error(error,MYF(0));
 	return 1;
       }
-      table->null_row=1;			// This is ok.
+      if (tab->on_expr)
+        mark_as_null_row(tab->table);
+      else
+        table->null_row=1;			// Why do this for inner join?
       empty_record(table);			// Make empty record
       return -1;
     }
@@ -4981,7 +4984,10 @@ join_read_const(JOIN_TAB *tab)
     }
     if (error)
     {
-      table->null_row=1;
+      if (tab->on_expr)
+        mark_as_null_row(tab->table);
+      else
+        table->null_row=1;
       empty_record(table);
       if (error != HA_ERR_KEY_NOT_FOUND)
       {
